Fix small spacing after parallax

--- a/src/styles/parallax.scss
+++ b/src/styles/parallax.scss
@@ -8,6 +8,7 @@
   flex-direction: column;
   transform-style: preserve-3d;
 }
+
 .layer__hero {
   width: 100%;
   object-fit: cover;
@@ -19,6 +20,17 @@
 .layer--1 {
   z-index: 50;
   bottom: 0;
+  position: relative;
+
+  &::after{
+    background-color: var(--primary);
+    width: 100%;
+    position: absolute;
+    height: 10px;
+    left: 0;
+    bottom: 0;
+    transform: translateY(100%);
+  }
 }
 .layer--2 {
   z-index: 40;
